--- a/www/assets/css/bonus-point.css
+++ b/www/assets/css/bonus-point.css
@@ -27,7 +27,7 @@
 	position: fixed;
 	bottom: 0;
 	padding: 25px;
-	font-family: "Lato", sans-serif;
+	font-family: "Roboto", sans-serif;
 	overflow: auto;
 }
 
@@ -59,8 +59,12 @@
 	display: inline-block;
 }
 
-.students li p:last-child:not(:first-child) {
+.students li p.points {
 	float: right;
+}
+
+.students li p.name {
+	cursor: text;
 }
 
 .classes, .students {
@@ -145,6 +149,7 @@ input, .title p, .controls p, .students li.select {
 .classes li p.points {
 	font-weight: 500;
 	font-size: 12px;
+	color: rgba(0, 0, 0, 0.6);
 }
 
 .classes li p.name {
