--- a/www/resources/css/electron.css
+++ b/www/resources/css/electron.css
@@ -35,6 +35,7 @@ body {
 	height: 39px;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 	z-index: 999;
+	position: relative;
 	
 	-webkit-app-region: drag;
 }
